implement linux support and build targets upgrade to java 16, javafx 16, gradle 7