@@ -5,8 +5,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath "org.openjfx:javafx-plugin:0.0.10"
-        classpath "org.beryx:badass-jlink-plugin:2.24.0"
+        classpath "org.beryx:badass-jlink-plugin:2.24.1"
         classpath "io.freefair.gradle:lombok-plugin:5.3.3.3"
     }
 }
@@ -14,9 +13,10 @@ apply plugin: "io.freefair.lombok"
 apply plugin: 'idea' // optional (to generate IntelliJ IDEA project files)
 apply plugin: "java"
 apply plugin: "application"
-apply plugin: "org.openjfx.javafxplugin"
 apply plugin: "org.beryx.jlink"
 group 'nl.jixxed'
+
+OperatingSystem os = org.gradle.nativeplatform.platform.internal.DefaultNativePlatform.currentOperatingSystem;
 java {
     modularity.inferModulePath.set(true)
 }
@@ -31,8 +31,14 @@ repositories {
     mavenCentral()
 }
 application {
-    mainModule = moduleName
+    mainModule = "nl.jixxed.eliteodysseymaterials"
     mainClass = "nl.jixxed.eliteodysseymaterials.Main"
+}
+
+if (os.isWindows()) {
+    ext { packageType = "msi" }
+} else {
+    ext { packageType = "deb" }
 }
 jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
@@ -43,17 +49,29 @@ jlink {
         ]
     }
     jpackage {
-        imageOptions += ['--icon', 'src/main/resources/images/application/rocket.ico']
-        installerOptions = [
-                '--description', 'Installer for ED Odyssey Materials Helper',
-                '--copyright', 'Copyright 2021 CMDR Jixxed',
-                '--name', 'Elite Dangerous Odyssey Materials Helper',
-                '--app-version', project.version,
-                '--win-upgrade-uuid', '60AAECE0-2E3A-4A25-A662-CABCD8D1CCCE',
-                '--win-per-user-install', '--win-dir-chooser',
-                '--win-menu', '--win-shortcut'
-        ]
+        appVersion = project.version
+        installerType = project.ext.packageType
+        if (installerType == 'msi') {
+            imageOptions += ['--icon', 'src/main/resources/images/application/rocket.ico']
+            installerOptions = [
+                    '--description', 'Installer for ED Odyssey Materials Helper',
+                    '--copyright', 'Copyright 2021 CMDR Jixxed',
+                    '--name', 'Elite Dangerous Odyssey Materials Helper',
+                    '--app-version', project.version
+            ]
+        }
+        if (installerType == 'deb') {
+            imageOptions += ['--icon', 'src/main/resources/images/application/rocket.png']
+            installerOptions += [
+                    '--linux-menu-group', 'Other',
+                    '--linux-shortcut'
+            ]
+        }
     }
+}
+def platform = 'linux'
+if (os.isWindows()) {
+    platform = 'win'
 }
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
@@ -62,15 +80,21 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.11.0'
-    testCompile "org.assertj:assertj-core:3.19.0"
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.11.0'
+    testImplementation "org.assertj:assertj-core:3.19.0"
 
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.3'
     implementation group: 'io.reactivex.rxjava3', name: 'rxjava', version: '3.0.13'
-    implementation 'org.jfxtras:jmetro:11.6.15'
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'org.slf4j:slf4j-simple:1.7.32'
 
+    implementation('org.jfxtras:jmetro:11.6.15') {
+        exclude group: 'org.openjfx'
+    }
+    implementation("org.openjfx:javafx-base:16:${platform}")
+    implementation("org.openjfx:javafx-controls:16:${platform}")
+    implementation("org.openjfx:javafx-fxml:16:${platform}")
+    implementation("org.openjfx:javafx-graphics:16:${platform}")
 }
 jpackage { dependsOn test }
 
@@ -78,25 +102,5 @@ test {
     useJUnitPlatform {
 
     }
-}
-compileTestJava {
-    java {
-        modularity.inferModulePath.set(true)
-    }
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'org.junit.platform.suite.api',
-                '--add-modules', 'org.junit.platform.runner',
-                '--add-reads', "$moduleName=org.junit.platform.suite.api",
-                '--add-reads', "$moduleName=org.junit.platform.runner",
-        ]
-        classpath = files()
-    }
-}
-
-javafx {
-    modules = ['javafx.controls', 'javafx.fxml']
-    version = '11.0.2'
 }
 mainClassName = 'nl.jixxed.eliteodysseymaterials.Main'
